feat: Add CORS configuration, exception handling, and update test coverage to 76 tests
- Added CORS middleware configuration in FastAPI with support for configurable origins via CORS_ORIGINS environment variable
- Implemented custom exception handling with AppException and ConfigurationException in domain layer
- Added FastAPIExceptionHandler for consistent error responses (400, 422, 500)
- Refactored AzureOpenAISettings to AppSettings to include CORS configuration management
- Updated all agents to use new AppSettings class
- Added 6 new tests for CORS configuration and exception handling
- Updated test coverage: now 76 tests total (63 unit + 13 integration)
- Updated README with AppSettings documentation and test statistics
- Updated .env.exemple with CORS_ORIGINS configuration example
- Enhanced code documentation with English docstrings in all modules
- Fixed requirements.txt and requirements-prod.txt with proper versioning

--- a/.env.exemple
+++ b/.env.exemple
@@ -2,11 +2,14 @@
 API_HOST=0.0.0.0
 API_PORT=8000
 
+# CORS Configuration
+CORS_ORIGINS=your-cors-1,your-cors-2
+
 # LLM / AI Agent Configuration
 AZURE_OPENAI_API_KEY=your_api_key_here
 AZURE_OPENAI_ENDPOINT=https://your-instance.openai.azure.com/
 AZURE_OPENAI_DEPLOYMENT_NAME=your_deployment_name
-AZURE_OPENAI_API_VERSION=2024-02-01
+AZURE_OPENAI_API_VERSION=your-api-version
 
 # Useful URLs
 # Health Check: http://localhost:8000/health
