--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,8 +1,7 @@
-load-dotenv
-python-dotenv
-openai
-pydantic
-fastapi
-uvicorn
-pyyaml
-jinja2
+python-dotenv>=1.0.0
+openai>=1.3.0
+pydantic>=2.0.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pyyaml>=6.0
+jinja2>=3.1.0
