--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-load-dotenv
-python-dotenv
-openai
-pydantic
-fastapi
-uvicorn
-pyyaml
-jinja2
-pytest
-pytest-cov
-pytest-asyncio
-pytest-mock
+python-dotenv>=1.0.0
+openai>=1.3.0
+pydantic>=2.0.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pyyaml>=6.0
+jinja2>=3.1.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.12.0
